--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h2>Welcome to Acciojobs!</h2>
-	<a href="https://acciojob.com/blog/"><h2>Blog</h2></a>
+    <marquee behavior="scroll" direction="left"><h2>Welcome to Acciojobs!</h2></marquee>
+    <a href="https://acciojob.com/blog/"><h2>Blog</h2></a>
 	<img src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" height= 200px>
 	<a href="https://acciojob.com/blog/brute-force-vs-optimization/"><h2>Brute Force vs. Optimization</h2></a>
     <p>We can say that optimization is one step further than the brute-force method of problem solving…</p>
